fix for post meta info wrapping

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -144,6 +144,10 @@ body {
         width: 50%;
       }
     }
+
+    .post-meta-info {
+      max-width: 60%;
+    }
   }
 
   @media(max-width: 555px) {
@@ -151,6 +155,16 @@ body {
       input {
         width: 40%;
       }
+    }
+
+    .post-meta-info {
+      max-width: 50%;
+    }
+  }
+
+  @media(max-width: 460px) {
+    .post-meta-info {
+      max-width: 40%;
     }
   }
 }
